--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,10 @@
 MONGO_URL=mongodb://localhost:27017/vvDatabase
 PORT=8000
 JWT_SECRE_KEY=srhrfnkjejrrhgilwhuirgy9wefoij
+
+
+SMTP_KEY=enxcyjaludjeaslf
+SMTP_POST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=shobhitkothiyal2@gmail.com
+SMTP_FROM_NAME=Shobhit Kothiyal
