--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,14 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js",
-     "start":"node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
-   
   "keywords": [],
   "author": "",
   "license": "ISC",
-"type":"module",
+  "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -20,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11"
   }
 }
